package configuration;

public class ReportConfiguration {

}
