package models;

public class Rule {

}
