@startuml components

package providers {

    abstract AbstractProvider {
        ReportConfiguration projectRequest
    }

    class ComponentList {

    }

    class IssueList {

    }

    class LanguageList {

    }

    class MeasureList {

    }

    class ProjectList {

    }

}

package factories {
    class ProviderFactory {
        ReportConfiguration projectRequest
        +create(final Class<T> providerClass) : AbstractProvider 
    }

    class ReportFactory {
        +create(conf ReportConfiguration, model Report) : void
    }

    class ReportModelFactory {
        ReportConfiguration projectRequest
        +ReportModelFactory(conf ReportConfiguration)
    }

    class ServerFactory {
        SonarQubeServer server
        SonarQubeServer create()
    }
}

package exporters { 
    abstract AbstractExporter {

    }

    class CSVExporter {

    }
}

package models {
    class Comment {
        String key
        String login
        String htmlText
        String markdown
        String updatable
        String createdAt
    }

    class Component {

    }

    class Issue {
         String severity
         String key
         String rule
         String component
         String project
         String line
         String resolution
         String effort
         String type
         String severity
         String language
         List<Comment> commentList
    }

    class Language {
        
    }

    class Measure {
        
    }

    class Project {
        String key
        String name
        String branch
        String organization
        String version
        String description
        LanguageList laguangeList
    }

    class Report {
        String projectName
        String projectAuthor
        String projectDate
        Project project
        IssueList unconfirmedIssues
        IssueList confirmedIssues
        MeasureList measureList
        ComponentList componentList
    }

    class Rule {
        
    }
}

package configuration {
    class SonarRequestList {
        List<ReportConfiguration> list
        List<Metric> metricList
        SonarQubeServer server
        boolean enableCSV
        +create() : void
    }

    class ReportConfiguration {
        String token
        String project
        String branch
        String author
        String version
    }

    
    class SonarQubeServer {
        String url
        boolean status
        int versionMajor
        int versionMinor
        int versionRevision
        int versionBuild
        boolean supported
    }
}

package view <<Node>> {
    class Browser {

    }

    class CommandLine {

    }
}

IssueList -up-|> AbstractProvider
ComponentList -up-|> AbstractProvider
LanguageList -up-|> AbstractProvider
MeasureList -up-|> AbstractProvider
ProjectList -up-|> AbstractProvider

ComponentList -down-> Component
IssueList -down-> Issue
LanguageList -down-> Language
MeasureList -down-> Measure
ProjectList -down-> Project
Issue -down-> Comment

ReportModelFactory -> Report
ProviderFactory -down-> AbstractProvider
ReportFactory -up-> AbstractExporter
ServerFactory -up-> SonarQubeServer
ReportModelFactory -> ProviderFactory

CSVExporter -up-|> AbstractExporter

CommandLine -down-> SonarRequestList
SonarRequestList -left-> ReportConfiguration
SonarRequestList -right-> SonarQubeServer
SonarRequestList -down-> ReportModelFactory

note "Creación de las listas de Modelos" as N1
note "Instacia de Server" as N2
note "MAIN para crear el Report" as N3
note "Crea diferentes exportables" as N4
N1 -up-> ProviderFactory
N2 -up-> ServerFactory
N3 -down-> ReportModelFactory
N4 -up-> ReportFactory  

@enduml